--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,51 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+strong {
+    color: rgb(255, 115, 115);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+li span {
+    color: #E17100;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+i {
+    color: #AAEBFF;
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+i strong {
+    color: #FF5E5C;
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+i.bi {
+    color: white;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.activated-part {
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.page-link, .page-link i {
+    color: #3B74FF;
+}
+
+.page-link:hover, .page-link:hover i {
+    color: #1648C5;
+}
+
+.guide-content .edit-button {
+    top: 20%;
+    display: none;
+}
+
+.guide-content:hover .edit-button {
+    display: inline-block;
+}
+
+.edit-button:hover i, .add-chapter-button:hover i {
+    color: rgb(139, 139, 139);
+}
+
+.edit-content:hover {
+    cursor: pointer;
+    border: 1 solid red;
 }
