--- a/src/components/adsense.css
+++ b/src/components/adsense.css
@@ -5,6 +5,13 @@
 @media(min-width: 992px) { 
     .vertical-ads { 
         display: block;
-        width: 330px; height: 500px; 
+        width: 330px; 
+        height: 500px; 
     } 
+}
+
+.horizontal-ads {
+    display: block;
+    width: 576px;
+    height: 50px;
 }
