--- a/src/components/adsense.css
+++ b/src/components/adsense.css
@@ -9,3 +9,14 @@
         height: 500px; 
     } 
 }
+
+.horizontal-ads {
+    display: inline-block;
+    width: 430px;
+    height: 50px;
+}
+
+.article-ads {
+    display: block;
+    text-align: center;
+}
