--- a/src/components/adsense.css
+++ b/src/components/adsense.css
@@ -1,19 +1,7 @@
 .vertical-ads { 
-    display: none;
-}
-
-@media(min-width: 992px) { 
-    .vertical-ads { 
-        display: block;
-        width: 240px; 
-        height: 500px; 
-    } 
-}
-
-.horizontal-ads {
-    display: inline-block;
-    width: 430px;
-    height: 50px;
+    display: block;
+    width: 100%;
+    min-height: 150px;
 }
 
 .article-ads {
