Increasing height value

--- a/src/components/adsense.css
+++ b/src/components/adsense.css
@@ -4,8 +4,8 @@
 
 @media(min-width: 992px) {
     .vertical-ads {
-        display: block;
+        display: inline-block;
         width: 240px;
-        height: 600px;
+        height: 800px;
     }
 }
