--- a/src/components/adsense.css
+++ b/src/components/adsense.css
@@ -9,3 +9,12 @@
         height: 800px;
     }
 }
+
+.article-ads {
+    display: block;
+    text-align: center;
+}
+
+ins.adsbygoogle[data-ad-status="unfilled"] {
+    display: none !important;
+}
