--- a/src/components/adsense.css
+++ b/src/components/adsense.css
@@ -6,7 +6,7 @@
     .vertical-ads {
         display: inline-block;
         width: 240px;
-        height: 800px;
+        height: 600px;
     }
 }
 
@@ -15,6 +15,6 @@
     text-align: center;
 }
 
-ins.adsbygoogle[data-ad-status="unfilled"] {
+.article-ads[data-ad-status="unfilled"] {
     display: none !important;
 }
